Added email activation in user

--- a/Training/pom.xml
+++ b/Training/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+
+        <!--       mail   -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
     <properties>
@@ -70,6 +77,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
