Fixed bug and added remember me

--- a/Training/pom.xml
+++ b/Training/pom.xml
@@ -82,6 +82,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!--    session    -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
